# gtf-polars

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  pypi-publish.yml  unit-tests.yml
.kiro/steering/: product.md  structure.md  tech.md
gtf_polars/: parser.py
gtf_polars.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: subset_gtf_feature.py  transcript_to_gene.py
tests/: test_parser.py
tests/data/: test.gtf
