[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtf-polars"
version = "0.1.0"
description = "Parse GTF files with Polars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
